@startuml
'https://plantuml.com/class-diagram

class InventoryTracker {
    + main(String[]): void
    + start(Stage): void
}

class InventoryTrackerController {

     - TableView<InventoryItem> inventoryTable

     - TableColumn<InventoryItem, String> serialNumberColumn
     - TableColumn<InventoryItem, String> nameColumn
     - TableColumn<InventoryItem, Double> valueColumn

     - Button addItemBtn
     - Button removeBtn
     - Button editItemBtn
     - Button sortByNameBtn
     - Button sortBySerialNumberBtn
     - Button sortByValueBtn
     - Button searchByNameBtn
     - Button searchBySerialNumberBtn
     - Button viewAllBtn
     - Button exportToTxtBtn
     - Button exportToHtmlBtn
     - Button importBtn

     - TextField newSerialNumber
     - TextField newValue
     - TextField newName
     - TextField editSerialNumber
     - TextField editName
     - TextField editValue
     - TextField txtFileName
     - TextField txtFileLocation
     - TextField htmlFileName
     - TextField htmlFileLocation
     - TextField importFileLocation
     - TextField nameToSearch
     - TextField serialNumberToSearch

     Inventory mainInventory
     ObservableList<InventoryItem> listOfItems

     +initialize(URL, ResourceBundle): void
     addItemBtnClicked(Event): void
     removeBtnClicked(Event): void
     editItemBtnClicked(Event): void
     exportToTxtBtnClicked(Event): void
     exportToHtmlBtnClicked(Event): void
     sortByNameBtnClicked(Event): void
     sortBySerialNumberBtnClicked(Event): void
     sortByValueBtnClicked(Event): void
     searchByNameBtnClicked(Event): void
     searchBySerialNumberBtnClicked(Event): void
     viewAllBtnClicked(Event): void
     importBtnClicked(Event): void
}

class Inventory {
    ArrayList<InventoryItem> items

    + Inventory()

    + getItems (): ArrayList<InventoryItem>

    + addItem(Item): void
    + removeItem(String): void

    + editNameOfItem(String, String): void
    + editSerialNumberOfItem(String, String): void
    + editValueOfItem(String, double): void

    + sortByName(): void
    + sortBySerialNumber(): void
    + sortByValue(): void

    + searchByName(String): InventoryItem
    + searchBySerialNumber(String): InventoryItem

    + exportTSV(String, String): String
    + exportHTML(String, String): String

    + importInventory(String): void
}

class InventoryItem {
    String name;
    String serialNumber;
    double value;

    + InventoryItem(String, String, double)

    + setName(String): void
    + setSerialNumber(String): void
    + setValue(double): void

    + getName(): String
    + getSerialNumber(): String
    + getValue(): double

    + toString(): String
}

javafx.Application <|-- InventoryTracker
javafx.Initializable <|... InventoryTrackerController
InventoryTracker <-- InventoryTrackerController
InventoryTrackerController *--> Inventory
Inventory *-> InventoryItem

@enduml